package it.cnr.istc.exploraa.api;

/**
 * This class represents the ExPLoRAA user.
 */
public class User {

    public long id;
    public String email, first_name, last_name;

    public User() {
    }
}